css/main.css
@font-face {
  font-family: "NexaBold";
  font-display: auto;
  src: url("../fonts/Nexa-Bold.ttf");
}

@font-face {
  font-family: "NexaLight";
  font-display: auto;
  src: url("../fonts/Nexa-Light.ttf");
}

::-webkit-scrollbar {
  width: 7px;
}

/* Track */

::-webkit-scrollbar-track {
  background: #f1f1f1;
}

/* Handle */

::-webkit-scrollbar-thumb {
  background: #888;
}

/* Handle on hover */

::-webkit-scrollbar-thumb:hover {
  background: #555;
}

a {
  text-decoration: none;
}

.hidden {
  display: none;
}

button:focus {
  outline: 0;
}

html,
body {
  background-color: #1e272e;
  width: 100%;
  height: 100%;
  margin: 0;
  overflow: hidden;
}

* {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  font-family: "NexaBold";
  color: white;
}

h1 {
  -webkit-animation: show 1.3s cubic-bezier(1, -0.17, 0.68, 0.84);
  animation: show 1.3s cubic-bezier(1, -0.17, 0.68, 0.84);
  font-size: calc(100px + (160 - 14) * ((100vw - 300px) / (1920 - 300)));
}

h2 {
  font-size: calc(30px + (50 - 30) * ((100vw - 300px) / (1920 - 300)));
}

h3 {
  font-size: calc(15px + (20 - 12) * ((100vw - 300px) / (1920 - 300)));
}

h4 {
  font-size: calc(14px + (17 - 12) * ((100vw - 300px) / (1920 - 300)));
}
h2,
h3,
h4,
button {
  -webkit-animation: show2 0.8s cubic-bezier(1, -0.17, 0.68, 0.84);
  animation: show2 0.8s cubic-bezier(1, -0.17, 0.68, 0.84);
}

p {
  -webkit-animation: show2 1s;
  animation: show2 1s;
  font-family: NexaLight;
}

/*#########################
          KEYFRAMES
 #########################*/

@-webkit-keyframes line2 {
  0% {
    width: 0;
  }
  100% {
    width: 100px;
  }
}

@keyframes line2 {
  0% {
    width: 0;
  }
  100% {
    width: 100px;
  }
}

@-webkit-keyframes leftSide {
  0% {
    width: 0;
  }
  100% {
    width: 50%;
  }
}

@keyframes leftSide {
  0% {
    width: 0;
  }
  100% {
    width: 50%;
  }
}

@-webkit-keyframes leftSide2 {
  0% {
    width: 0;
  }
  100% {
    width: 100%;
  }
}

@keyframes leftSide2 {
  0% {
    width: 0;
  }
  100% {
    width: 100%;
  }
}

@-webkit-keyframes arrow {
  0% {
    bottom: 0;
  }
  50% {
    bottom: 10px;
  }
  100% {
    bottom: 0;
  }
}

@keyframes arrow {
  0% {
    bottom: 0;
  }
  50% {
    bottom: 10px;
  }
  100% {
    bottom: 0;
  }
}

@-webkit-keyframes show {
  0% {
    opacity: 0;
    -webkit-transform: translateY(-30px);
    transform: translateY(-30px);
  }
  100% {
    opacity: 1;
    -webkit-transform: translateY(0);
    transform: translateY(0);
  }
}

@keyframes show {
  0% {
    opacity: 0;
    -webkit-transform: translateY(-30px);
    transform: translateY(-30px);
  }
  100% {
    opacity: 1;
    -webkit-transform: translateY(0);
    transform: translateY(0);
  }
}

@-webkit-keyframes show2 {
  0% {
    opacity: 0;
    -webkit-transform: translateX(-10px);
    transform: translateX(-10px);
  }
  100% {
    opacity: 1;
    -webkit-transform: translateX(0);
    transform: translateX(0);
  }
}

@keyframes show2 {
  0% {
    opacity: 0;
    -webkit-transform: translateX(-10px);
    transform: translateX(-10px);
  }
  100% {
    opacity: 1;
    -webkit-transform: translateX(0);
    transform: translateX(0);
  }
}

@-webkit-keyframes topMenu {
  0% {
    height: 0;
  }
  100% {
    height: 100%;
  }
}

@keyframes topMenu {
  0% {
    height: 0;
  }
  100% {
    height: 100%;
  }
}

@-webkit-keyframes line {
  0% {
    height: 0;
  }
  100% {
    height: 25px;
  }
}

@keyframes line {
  0% {
    height: 0;
  }
  100% {
    height: 25px;
  }
}

/*#########################
          HEADER
 #########################*/

.header {
  padding: 10px 25px;
  display: -webkit-box;
  display: -ms-flexbox;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: flex;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100vw;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: fixed;
  top: 0;
  z-index: 500;
  -webkit-animation: show 0.5s;
  animation: show 0.5s;
  -webkit-transition: background-color 0.5s;
  -o-transition: background-color 0.5s;
  transition: background-color 0.5s;
}

.header.active {
  background-color: #171921;
}

.header__logo {
  border: 3px solid white;
  padding: 5px;
  font-size: 14px;
  font-family: Raleway;
  -webkit-animation: show 0.5s;
  animation: show 0.5s;
  text-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
}

.header__menu {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}
.header__menu h3 {
  letter-spacing: 1px;
  margin-right: 15px;
}

.header .hamburger h3 {
  letter-spacing: 2px;
}

.menu-toggle {
  -webkit-box-flex: 0;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 40px;
  height: 40px;
  border: 1px solid white;
  cursor: pointer;
  position: relative;
  z-index: 20;
}

.hamburger,
.cross {
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

.hamburger span {
  display: block;
  width: 18px;
  height: 2px;
  margin-bottom: 3px;
  overflow: hidden;
  position: relative;
}

.hamburger span:last-child {
  margin: 0;
}

.hamburger span:before,
.hamburger span:after {
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: white;
  -webkit-transform: translateX(-200%);
  -ms-transform: translateX(-200%);
  transform: translateX(-200%);
  -webkit-transition: -webkit-transform ease 300ms;
  transition: -webkit-transform ease 300ms;
  -o-transition: transform ease 300ms;
  transition: transform ease 300ms, -webkit-transform ease 300ms;
}

.hamburger span:after {
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
}
/* ... */

